<?xml version="1.0"?>
<package>
  <name>kuka_controller</name>
  <version>0.1.0</version>
  <description>kuka_controller</description>
  <maintainer email="2043444162@qq.com">shuimujieming</maintainer>
  <author>shuimujieming</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rviz</build_depend>
  <run_depend>rviz</run_depend>

  
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

 
</package>
